fix: redacted jump btn

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@
 
 }
 
-.game__btn-quit {
+.game__btn {
   /* display: block; */
   width: 140px;
   height: 50px;
